# Power-Station-Dictionary

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Documentation.ipynb  LICENSE.txt  README.md  dictionary.html  environment.yml  generate_website.yml  index.html  mkdocs.yml  pipeline_inputs.yaml  power_stations.csv  pyproject.toml  settings.ini  setup.py  sitemap.xml  update_website.yml
00-documentation/: index.html
01-source-data/: index.html
02-data-definitions/: index.html
03-database-construction/: index.html
04-updates-and-cleaning/: index.html
05-pipeline/: index.html
05-pipelines/: index.html
06-ci-cd/: index.html
about/: about.html  contributing.html  dictionary_schema.html
batch_scripts/: docs_publish.bat  launch_lab.bat  pypi_publish.bat  serve_docs.bat  setup_env.bat  update_env.bat
blog/: carbon-intensity.html  launch.html
data/: dictionary.db
datasets/: annual-output.html  bmu-fuel-types.html  capture-prices.html  carbon-intensity.html  cfd-contract-portfolio-status.html  cfd-strike-prices.html  common-names.html  generation_availability_rawUOU2T14D.html  global-power-plant-database.html  jrc-hydro-power-plants-database.html  load-factors.html  nuclear-power-plants.html  plant-locations.html  renewable-energy-planning-database.html  verified-emissions.html  wind-farms.html
dictionary/: index.html
docs/: 00-documentation.md  01-exploring-input-data.md  01-source-data.md  02-data-definitions.md  02-merging-datasets.md  03-database-construction.md  03-updates-and-corrections.md  04-updates-and-cleaning.md  05-carbon-intensity.md  05-pipeline.md  05-pipelines.md  06-ci-cd.md  Documentation.ipynb  architecture.md  dictionary.md  generation-process.md  index.md
generation-process/: index.html
javascripts/: tables.js
nbs/: 00-documentation.ipynb  01-dictionary-page.ipynb  01-downloading-input-data.ipynb  01-exploring-input-data.ipynb  01-frictionless-sqlmodel.ipynb  01-source-data.ipynb  02-attribute extraction.ipynb  02-data-definitions.ipynb  02-dynamic-fd-table-generation.ipynb  02-merging-datasets.ipynb  03-database-construction.ipynb  03-page-population.ipynb  03-renewables-chp-crawler.ipynb  04-bmrs-crawler.ipynb  04-cli.ipynb  04-updates-and-cleaning.ipynb  04-updates-and-corrections.ipynb  05-carbon-intensity.ipynb  05-pipeline.ipynb  05-pipelines.ipynb  05-populating-psd.ipynb  06-ci-cd.ipynb  08-papers.ipynb  (+7 more)
(+1344 files in other folders)
